compiler-core/src/parse/snapshots/gleam_core__parse__tests__external_attribute_with_non_fn_definition.snap
---
source: compiler-core/src/parse/tests.rs
expression: "\n@external(erlang, \"module\", \"fun\")\npublic type Fun = Fun\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "module", "fun")
public type Fun = Fun


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │
2 │ @external(erlang, "module", "fun")
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ I was expecting a function definition after this
